<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_avatar"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/action_avator" />
        <item
            android:id="@+id/nav_bg"
            android:icon="@drawable/ic_photo_black_24dp"
            android:title="@string/action_bg" />
    </group>

    <item android:title="其他">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/title_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/title_send" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_more_horiz_black_24dp"
                android:title="@string/title_about" />
        </menu>
    </item>

</menu>