<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/character_details">

    <RelativeLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/character_img"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_zhaoyun" />

        <ImageView
            android:id="@+id/back_to_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/character_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="100dp"
            android:ems="1"
            android:text="Name"
            android:textColor="#FFFF"
            android:textSize="40sp" />

        <ImageView
            android:id="@+id/favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_favorite_white" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/introduction"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:weightSum="12">

        <ImageView
            android:id="@+id/back_to_card"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@mipmap/ic_launcher_back" />

        <TextView
            android:id="@+id/introduction_name"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="Name"
            android:textColor="#808080"
            android:textSize="30sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/character_sex_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_sex"
                android:textColor="#808080"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/character_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/character_sex_tips"
                android:text="Sex"
                android:textColor="#808080"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/character_birth_tips"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/title_date"
                android:textColor="#808080"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/character_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/character_birth_tips"
                android:text="Date"
                android:textColor="#808080"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5">

            <TextView
                android:id="@+id/character_origin_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_origin"
                android:textColor="#808080"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/character_origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/character_origin_tips"
                android:text="蜀国"
                android:textColor="#808080"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5">

            <TextView
                android:id="@+id/character_force_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_force"
                android:textColor="#808080"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/character_force"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/character_force_tips"
                android:text="Text"
                android:textColor="#808080"
                android:textSize="20sp" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/title_moreinfo"
            android:textColor="#808080"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/introduction_others"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:text="赵云，字子龙，常山人氏，巴拉巴拉救阿斗，然后什么什么的，我编不下去了"
            android:textColor="#808080"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>